tdf#87400: sw: fix ~SwIndexReg assertion in AutoCorrect

SwAutoFormat::DoUnderline() calls DeleteSel() with a SwPaM that is not
corrected, except if it's passed along directly to SwDoc methods.

(regression from f9b62506b22c3eb885ffd5a4ec8025c33df7b2d4)

Change-Id: I741e0391e7f8e09a64bcfe99ca4d650f1016aaa7